--- a/src/pages/Repo/styles.scss
+++ b/src/pages/Repo/styles.scss
@@ -43,14 +43,17 @@
     }
 
     .repository__details {
-      strong {
+      a {
         font-size: 36px;
         color: #3d3d4d;
+        font-weight: bold;
       }
 
       p {
         font-size: 18px;
         color: #737380;
+        word-break: break-all;
+        white-space: normal;
       }
     }
   }
@@ -113,6 +116,8 @@
       strong {
         font-size: 20px;
         color: #3d3d4d;
+        word-break: break-all;
+        white-space: normal;
       }
 
       p {
