--- a/src/pages/Repo/styles.scss
+++ b/src/pages/Repo/styles.scss
@@ -73,7 +73,7 @@
         color: #3d3d4d;
       }
 
-      span {
+      a {
         display: flex;
         align-items: center;
         font-size: 20px;
